--- a/glassfish/index.html
+++ b/glassfish/index.html
@@ -113,7 +113,7 @@ firewall-cmd --reload
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
 </div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/zimbra/backup/" title="Backup"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - Backup</a>
-<a class="nav nav-next" href="https://tecnep.com/system_resources/" title="System Resources">Next - System Resources <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="https://tecnep.com/storage/" title="Storage">Next - Storage <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer>
 <p class="powered"> Developers <a href="https://tecnep.com"> tecnep.com </a> </p>
 </footer>
@@ -154,8 +154,6 @@ firewall-cmd --reload
 <li class=" has-sub-menu"><a href="https://tecnep.com/firewall/">Firewall<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="https://tecnep.com/firewall/firewall_keepalive/">Firewalld and keepalived</a></li>
-<li class=""><a href="https://tecnep.com/firewall/rich_rule/">Rich rule</a></li>
 </ul>
   
 </li>
@@ -173,10 +171,17 @@ firewall-cmd --reload
   
 </li>
 
-<li class=" has-sub-menu"><a href="https://tecnep.com/system_resources/">System Resources<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="https://tecnep.com/storage/">Storage<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="https://tecnep.com/system_resources/increase_hd/">Increase hard disk</a></li>
+<li class=""><a href="https://tecnep.com/storage/lvm/">LVM</a></li>
+<li class=""><a href="https://tecnep.com/storage/raid/">RAID</a></li>
+<li class=""><a href="https://tecnep.com/storage/san_nas/">SAN and NAS</a></li>
+<li class=""><a href="https://tecnep.com/storage/storage_access/">Storage access methods</a></li>
+<li class=""><a href="https://tecnep.com/storage/drbd/">DRBD</a></li>
+<li class=""><a href="https://tecnep.com/storage/glusterfs/">Increase hard disk</a></li>
+<li class=""><a href="https://tecnep.com/storage/object_storage/">Object storage</a></li>
+<li class=""><a href="https://tecnep.com/storage/increase_hd/">Increase hard disk</a></li>
 </ul>
   
 </li>
