--- a/glassfish/index.html
+++ b/glassfish/index.html
@@ -154,6 +154,8 @@ firewall-cmd --reload
 <li class=" has-sub-menu"><a href="https://tecnep.com/firewall/">Firewall<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="https://tecnep.com/firewall/firewall_keepalive/">Firewalld and keepalived</a></li>
+<li class=""><a href="https://tecnep.com/firewall/rich_rule/">Rich rule</a></li>
 </ul>
   
 </li>
